--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "font-awesome": "^4.7.0",
         "jquery": "^3.7.1",
         "react": "^18.2.0",
+        "react-data-table-component": "^7.6.2",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.49.3",
         "react-router-dom": "^6.21.3",
